styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Baskervville&family=IBM+Plex+Sans:ital,wght@0,200;0,600;1,200;1,400;1,500;1,600&family=Noto+Sans+TC:wght@100;300&family=Noto+Serif+TC:wght@200;400;600&display=swap');

html {
  font-size: 16px;
}

body {
  padding: 0;
  margin: 0;

  user-select: none;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  margin: 0;
  box-sizing: border-box;
  scrollbar-width: none; /* Firefox */
}
::-webkit-scrollbar {
  width: 0;
}

:root {
  --title-font-en: 'Ogg';
  --title-font-zh: 'Noto Serif TC';
  --subtitle-font-en: 'Baskervville';
  --subtitle-font-zh: 'Noto Serif TC';
  --main-font-en: 'IBM Plex Sans';
  --main-font-zh: 'Noto Sans TC';
}

.App {
  font-family: sans-serif;
  text-align: center;
  box-sizing: border-box;
}

.react-flow__node-selectorNode {
  font-size: 12px;
  background: #eee;
  border: 1px solid #555;
  border-radius: 5px;
  text-align: center;
}

h1 {
  font-family: var(--title-font-en, serif);
  font-size: 6rem;
}
h2 {
  font-family: var(--title-font-zh, serif);
  font-size: 1.5rem;
  font-weight: 100;
}

h3 {
  font-family: var(--title-font-en, serif);
  font-size: 2rem;
  padding: 3px;
}

h4 {
  font-family: var(--subtitle-font-zh, serif);
  font-size: 1.2rem;
  padding: 0.8rem;
}

span.row-letter {
  font-family: var(--title-font-en, serif);
  min-width: 15px;
}

span,
div,
p {
  font-family: custom-sans-serif, sans-serif;
  font-size: 0.8rem;
  line-height: 1.3rem;
  letter-spacing: 1px;
}

div {
  line-height: 1rem;
}

@font-face {
  font-family: custom-sans-serif;
  src: local('Noto Sans TC');
  unicode-range: U+4E00-9FFF;
}

@font-face {
  font-family: custom-sans-serif;
  src: url('/fonts/IBMPlexSans-ExtraLight.ttf') format('truetype');
  /* src: local('IBM Plex Sans') format('truetype'); */
  unicode-range: U+00-024F;
  font-weight: 400;
  font-style: normal;
}
@font-face {
  font-family: custom-sans-serif;
  src: url('/fonts/IBMPlexSans-Medium.ttf') format('truetype');
  unicode-range: U+00-024F;
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'Ogg';
  src: url('/fonts/OggBold.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}
@font-face {
  font-family: 'Ogg';
  src: url('/fonts/OggRegular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

table {
  border-collapse: collapse;
}

